[gd_scene load_steps=125 format=2]

[ext_resource path="res://assets/boy/idle/boy_idle19.png" type="Texture" id=1]
[ext_resource path="res://src/actors/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/boy/idle/boy_idle16.png" type="Texture" id=3]
[ext_resource path="res://assets/boy/idle/boy_idle20.png" type="Texture" id=4]
[ext_resource path="res://assets/boy/run/boy_run10.png" type="Texture" id=5]
[ext_resource path="res://assets/boy/run/boy_run9.png" type="Texture" id=6]
[ext_resource path="res://assets/boy/run/boy_run6.png" type="Texture" id=7]
[ext_resource path="res://assets/boy/air_up/boy_air_up1.png" type="Texture" id=8]
[ext_resource path="res://assets/boy/air_down/boy_air_down9.png" type="Texture" id=9]
[ext_resource path="res://assets/boy/air_down/boy_air_down8.png" type="Texture" id=10]
[ext_resource path="res://assets/boy/air_up/boy_air_up3.png" type="Texture" id=11]
[ext_resource path="res://assets/boy/air_down/boy_air_down6.png" type="Texture" id=12]
[ext_resource path="res://assets/boy/air_up/boy_air_up4.png" type="Texture" id=13]
[ext_resource path="res://assets/boy/idle/boy_idle17.png" type="Texture" id=14]
[ext_resource path="res://assets/boy/idle/boy_idle18.png" type="Texture" id=15]
[ext_resource path="res://assets/boy/idle/boy_idle13.png" type="Texture" id=16]
[ext_resource path="res://assets/boy/idle/boy_idle14.png" type="Texture" id=17]
[ext_resource path="res://assets/boy/idle/boy_idle15.png" type="Texture" id=18]
[ext_resource path="res://assets/boy/idle/boy_idle4.png" type="Texture" id=19]
[ext_resource path="res://assets/boy/idle/boy_idle5.png" type="Texture" id=20]
[ext_resource path="res://assets/boy/idle/boy_idle7.png" type="Texture" id=21]
[ext_resource path="res://assets/boy/idle/boy_idle6.png" type="Texture" id=22]
[ext_resource path="res://assets/boy/idle/boy_idle9.png" type="Texture" id=23]
[ext_resource path="res://assets/boy/idle/boy_idle8.png" type="Texture" id=24]
[ext_resource path="res://assets/boy/idle/boy_idle10.png" type="Texture" id=25]
[ext_resource path="res://assets/boy/idle/boy_idle11.png" type="Texture" id=26]
[ext_resource path="res://assets/boy/idle/boy_idle12.png" type="Texture" id=27]
[ext_resource path="res://assets/boy/idle/boy_idle1.png" type="Texture" id=28]
[ext_resource path="res://assets/boy/idle/boy_idle2.png" type="Texture" id=29]
[ext_resource path="res://assets/boy/idle/boy_idle3.png" type="Texture" id=30]
[ext_resource path="res://assets/boy/run/boy_run3.png" type="Texture" id=31]
[ext_resource path="res://assets/boy/run/boy_run7.png" type="Texture" id=32]
[ext_resource path="res://assets/boy/run/boy_run8.png" type="Texture" id=33]
[ext_resource path="res://assets/boy/run/boy_run2.png" type="Texture" id=34]
[ext_resource path="res://assets/boy/run/boy_run5.png" type="Texture" id=35]
[ext_resource path="res://assets/boy/run/boy_run4.png" type="Texture" id=36]
[ext_resource path="res://assets/boy/run/boy_run1.png" type="Texture" id=37]
[ext_resource path="res://assets/boy/air_up/boy_air_up9.png" type="Texture" id=38]
[ext_resource path="res://assets/boy/air_up/boy_air_up10.png" type="Texture" id=39]
[ext_resource path="res://assets/boy/air_up/boy_air_up6.png" type="Texture" id=40]
[ext_resource path="res://assets/boy/air_up/boy_air_up5.png" type="Texture" id=41]
[ext_resource path="res://assets/boy/air_up/boy_air_up7.png" type="Texture" id=42]
[ext_resource path="res://assets/boy/air_up/boy_air_up2.png" type="Texture" id=43]
[ext_resource path="res://assets/boy/air_up/boy_air_up8.png" type="Texture" id=44]
[ext_resource path="res://assets/boy/air_down/boy_air_down2.png" type="Texture" id=45]
[ext_resource path="res://assets/boy/air_down/boy_air_down5.png" type="Texture" id=46]
[ext_resource path="res://assets/boy/air_down/boy_air_down3.png" type="Texture" id=47]
[ext_resource path="res://assets/boy/air_down/boy_air_down1.png" type="Texture" id=48]
[ext_resource path="res://assets/boy/air_down/boy_air_down7.png" type="Texture" id=49]
[ext_resource path="res://assets/boy/air_down/boy_air_down10.png" type="Texture" id=50]
[ext_resource path="res://assets/boy/air_down/boy_air_down4.png" type="Texture" id=51]
[ext_resource path="res://assets/boy/run_gun/boy_run_gun8.png" type="Texture" id=52]
[ext_resource path="res://assets/boy/run_gun/boy_run_gun9.png" type="Texture" id=53]
[ext_resource path="res://assets/boy/run_gun/boy_run_gun10.png" type="Texture" id=54]
[ext_resource path="res://assets/boy/idle_gun/boy_idle_gun20.png" type="Texture" id=55]
[ext_resource path="res://assets/boy/idle_gun/boy_idle_gun18.png" type="Texture" id=56]
[ext_resource path="res://assets/boy/idle_gun/boy_idle_gun19.png" type="Texture" id=57]
[ext_resource path="res://assets/boy/idle_gun/boy_idle_gun8.png" type="Texture" id=58]
[ext_resource path="res://assets/boy/idle_gun/boy_idle_gun9.png" type="Texture" id=59]
[ext_resource path="res://assets/boy/idle_gun/boy_idle_gun12.png" type="Texture" id=60]
[ext_resource path="res://assets/boy/idle_gun/boy_idle_gun11.png" type="Texture" id=61]
[ext_resource path="res://assets/boy/idle_gun/boy_idle_gun16.png" type="Texture" id=62]
[ext_resource path="res://assets/boy/idle_gun/boy_idle_gun13.png" type="Texture" id=63]
[ext_resource path="res://assets/boy/idle_gun/boy_idle_gun7.png" type="Texture" id=64]
[ext_resource path="res://assets/boy/idle_gun/boy_idle_gun10.png" type="Texture" id=65]
[ext_resource path="res://assets/boy/idle_gun/boy_idle_gun14.png" type="Texture" id=66]
[ext_resource path="res://assets/boy/idle_gun/boy_idle_gun15.png" type="Texture" id=67]
[ext_resource path="res://assets/boy/idle_gun/boy_idle_gun17.png" type="Texture" id=68]
[ext_resource path="res://assets/boy/idle_gun/boy_idle_gun1.png" type="Texture" id=69]
[ext_resource path="res://assets/boy/idle_gun/boy_idle_gun2.png" type="Texture" id=70]
[ext_resource path="res://assets/boy/idle_gun/boy_idle_gun3.png" type="Texture" id=71]
[ext_resource path="res://assets/boy/idle_gun/boy_idle_gun4.png" type="Texture" id=72]
[ext_resource path="res://assets/boy/idle_gun/boy_idle_gun5.png" type="Texture" id=73]
[ext_resource path="res://assets/boy/idle_gun/boy_idle_gun6.png" type="Texture" id=74]
[ext_resource path="res://assets/boy/run_gun/boy_run_gun3.png" type="Texture" id=75]
[ext_resource path="res://assets/boy/run_gun/boy_run_gun5.png" type="Texture" id=76]
[ext_resource path="res://assets/boy/run_gun/boy_run_gun6.png" type="Texture" id=77]
[ext_resource path="res://assets/boy/run_gun/boy_run_gun7.png" type="Texture" id=78]
[ext_resource path="res://assets/boy/run_gun/boy_run_gun4.png" type="Texture" id=79]
[ext_resource path="res://assets/boy/run_gun/boy_run_gun2.png" type="Texture" id=80]
[ext_resource path="res://assets/boy/run_gun/boy_run_gun1.png" type="Texture" id=81]
[ext_resource path="res://assets/boy/air_up_gun/boy_air_up_gun7.png" type="Texture" id=82]
[ext_resource path="res://assets/boy/air_up_gun/boy_air_up_gun3.png" type="Texture" id=83]
[ext_resource path="res://assets/boy/air_up_gun/boy_air_up_gun1.png" type="Texture" id=84]
[ext_resource path="res://assets/boy/air_up_gun/boy_air_up_gun4.png" type="Texture" id=85]
[ext_resource path="res://assets/boy/air_up_gun/boy_air_up_gun2.png" type="Texture" id=86]
[ext_resource path="res://assets/boy/air_up_gun/boy_air_up_gun8.png" type="Texture" id=87]
[ext_resource path="res://assets/boy/air_up_gun/boy_air_up_gun6.png" type="Texture" id=88]
[ext_resource path="res://assets/boy/air_up_gun/boy_air_up_gun5.png" type="Texture" id=89]
[ext_resource path="res://assets/boy/air_down_gun/boy_air_down_gun5.png" type="Texture" id=90]
[ext_resource path="res://assets/boy/air_up_gun/boy_air_up_gun10.png" type="Texture" id=91]
[ext_resource path="res://assets/boy/air_down_gun/boy_air_down_gun3.png" type="Texture" id=92]
[ext_resource path="res://assets/boy/air_down_gun/boy_air_down_gun6.png" type="Texture" id=93]
[ext_resource path="res://assets/boy/air_up_gun/boy_air_up_gun9.png" type="Texture" id=94]
[ext_resource path="res://assets/boy/air_down_gun/boy_air_down_gun2.png" type="Texture" id=95]
[ext_resource path="res://assets/boy/air_down_gun/boy_air_down_gun9.png" type="Texture" id=96]
[ext_resource path="res://assets/boy/air_down_gun/boy_air_down_gun1.png" type="Texture" id=97]
[ext_resource path="res://assets/boy/air_down_gun/boy_air_down_gun7.png" type="Texture" id=98]
[ext_resource path="res://assets/boy/air_down_gun/boy_air_down_gun10.png" type="Texture" id=99]
[ext_resource path="res://assets/boy/air_down_gun/boy_air_down_gun4.png" type="Texture" id=100]
[ext_resource path="res://assets/boy/air_down_gun/boy_air_down_gun8.png" type="Texture" id=101]
[ext_resource path="res://assets/boy/death/boy_death2.png" type="Texture" id=102]
[ext_resource path="res://assets/boy/death/boy_death4.png" type="Texture" id=103]
[ext_resource path="res://assets/boy/death/boy_death3.png" type="Texture" id=104]
[ext_resource path="res://assets/boy/death/boy_death1.png" type="Texture" id=105]
[ext_resource path="res://assets/boy/stunned/boy_stunned4.png" type="Texture" id=106]
[ext_resource path="res://assets/boy/stunned/boy_stunned2.png" type="Texture" id=107]
[ext_resource path="res://assets/boy/stunned/boy_stunned3.png" type="Texture" id=108]
[ext_resource path="res://assets/boy/stunned/boy_stunned1.png" type="Texture" id=109]
[ext_resource path="res://src/UI/uni0553-webfont.ttf" type="DynamicFontData" id=110]
[ext_resource path="res://src/actors/PlayerNotif.gd" type="Script" id=111]
[ext_resource path="res://sound/boy/jump.wav" type="AudioStream" id=112]
[ext_resource path="res://sound/boy/walking.wav" type="AudioStream" id=113]
[ext_resource path="res://sound/boy/shoot.wav" type="AudioStream" id=114]
[ext_resource path="res://sound/boy/death.wav" type="AudioStream" id=115]
[ext_resource path="res://sound/hurt.wav" type="AudioStream" id=116]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 22 ), ExtResource( 21 ), ExtResource( 24 ), ExtResource( 23 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 3 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 1 ), ExtResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 109 ), ExtResource( 107 ), ExtResource( 108 ), ExtResource( 106 ) ],
"loop": true,
"name": "stunned",
"speed": 10.0
}, {
"frames": [ ExtResource( 105 ), ExtResource( 102 ), ExtResource( 104 ), ExtResource( 103 ) ],
"loop": false,
"name": "death",
"speed": 10.0
}, {
"frames": [ ExtResource( 81 ), ExtResource( 80 ), ExtResource( 75 ), ExtResource( 79 ), ExtResource( 76 ), ExtResource( 77 ), ExtResource( 78 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ) ],
"loop": true,
"name": "run_gun",
"speed": 10.0
}, {
"frames": [ ExtResource( 37 ), ExtResource( 34 ), ExtResource( 31 ), ExtResource( 36 ), ExtResource( 35 ), ExtResource( 7 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ ExtResource( 69 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 74 ), ExtResource( 64 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 65 ), ExtResource( 61 ), ExtResource( 60 ), ExtResource( 63 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 62 ), ExtResource( 68 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 55 ) ],
"loop": true,
"name": "idle_gun",
"speed": 10.0
}, {
"frames": [ ExtResource( 48 ), ExtResource( 45 ), ExtResource( 47 ), ExtResource( 51 ), ExtResource( 46 ), ExtResource( 12 ), ExtResource( 49 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 50 ) ],
"loop": true,
"name": "air_down",
"speed": 10.0
}, {
"frames": [ ExtResource( 84 ), ExtResource( 86 ), ExtResource( 83 ), ExtResource( 85 ), ExtResource( 89 ), ExtResource( 88 ), ExtResource( 82 ), ExtResource( 87 ), ExtResource( 94 ), ExtResource( 91 ) ],
"loop": true,
"name": "air_up_gun",
"speed": 10.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 43 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 41 ), ExtResource( 40 ), ExtResource( 42 ), ExtResource( 44 ), ExtResource( 38 ), ExtResource( 39 ) ],
"loop": true,
"name": "air_up",
"speed": 10.0
}, {
"frames": [ ExtResource( 97 ), ExtResource( 95 ), ExtResource( 92 ), ExtResource( 100 ), ExtResource( 90 ), ExtResource( 93 ), ExtResource( 98 ), ExtResource( 101 ), ExtResource( 96 ), ExtResource( 99 ) ],
"loop": true,
"name": "air_down_gun",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 7 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 7 )

[sub_resource type="DynamicFont" id=4]
size = 8
font_data = ExtResource( 110 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )
Label/colors/font_color = Color( 0.87451, 0.878431, 0.909804, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = null
Label/styles/normal = null

[sub_resource type="OccluderPolygon2D" id=6]
polygon = PoolVector2Array( -5, 5, -5, -5, -4, -5, -4, -7, 4, -7, 4, -5, 5, -5, 5, 4, 4, 4, 4, 1, 3, 1, 3, 3, 2, 3, 2, 7, 3, 7, 3, 8, 1, 8, 1, 3, -1, 3, -1, 7, 0, 7, 0, 8, -2, 8, -2, 3, -3, 3, -3, 1, -4, 1, -4, 5 )

[sub_resource type="Animation" id=7]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.305882 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Player" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"
frame = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -38 )
current = true
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_speed = 10.0
drag_margin_left = 0.3
drag_margin_top = 0.0
drag_margin_right = 0.3
drag_margin_bottom = 0.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 244

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
modulate = Color( 0, 0.945098, 0.258824, 1 )
shape = SubResource( 3 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -84.0
margin_top = -19.0
margin_right = 84.0
margin_bottom = -3.0
theme = SubResource( 5 )
text = "label"
align = 1
script = ExtResource( 111 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 6 )

[node name="Sounds" type="Node" parent="."]

[node name="walk" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 113 )
volume_db = -2.0
bus = "sounds"

[node name="jump" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 112 )
volume_db = -5.0
bus = "sounds"

[node name="shoot" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 114 )
bus = "sounds"

[node name="death" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 115 )
bus = "sounds"

[node name="hurt" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 116 )
bus = "sounds"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/invincible = SubResource( 7 )
anims/normal = SubResource( 8 )

[node name="ShootAnimTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_entered" from="Area2D" to="Label" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="area_exited" from="Area2D" to="Label" method="_on_Area2D_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="ShootAnimTimer" to="." method="_on_ShootAnimTimer_timeout"]
